readme file edited. airflow dag file added spark application file added